# VREP_Pathfinding

./: .gitignore  A_StarPath.cpp  A_StarPath.h  A_star_V_rep.mk  A_star_V_rep.project  A_star_V_rep.txt  Bridge.cpp  Bridge.h  CMakeLists.txt  ConnectionErrorException.cpp  ConnectionErrorException.h  DR12_Robot.cpp  DR12_Robot.h  Doxyfile  HistoricalPosition.cpp  HistoricalPosition.h  Joint.cpp  Joint.h  NoPathException.cpp  NoPathException.h  Object.cpp  Object.h  OutOfBoundException.cpp  OutOfBoundException.h  PathInterface.cpp  PathInterface.h  Playground.cpp  Playground.h  Position.cpp  Position.h  README.md  Robot.cpp  Robot.h  Sensor.cpp  Sensor.h  VREP_Pathfinding.mk  VREP_Pathfinding.project  VREP_Pathfinding.txt  VRepApi.cpp  VRepApi.h  (+6 more)
Documentation/Docomentation/latex/: refman.tex
Documentation/Presentation/latex/: VREP_Pathfinding.tex  template_Beamer.tex
PathFinding/: NoPathException.cpp  NoPathException.h  OutOfBoundException.cpp  PathInterface.cpp  Playground.cpp  Position.cpp  Position.h
PathFinding/A_Star/: A_StarPath.cpp  A_StarPath.h
Utilities/: Utilities.cpp  Utilities.h
VREP/: VRepApi.h
VREP/Exceptions/: ConnectionErrorException.h  ReturnCodesExceptions.cpp  ReturnCodesExceptions.h
VREP/Objects/: Object.cpp  Object.h  Robot.cpp  Robot.h  Sensor.h
VREP/Objects/Robots/: DR12_Robot.cpp  DR12_Robot.h
VREP/Objects/Robots/Parts/: Joint.cpp  Joint.h  Wheel.cpp  Wheel.h
VREP/Objects/Sensors/: VisionSensor.cpp  VisionSensor.h
VREP_scenes/: README.md  scene1.ttt  visionSensorOverTerrain.ttt
remoteApi/: V_rep_Tutorial.mk  V_rep_Tutorial.project  V_rep_Tutorial.txt
